--- a/static/td-style.css
+++ b/static/td-style.css
@@ -1,4 +1,5 @@
 @import url("./icons.css");
+@import url(https://fonts.googleapis.com/css?family=Lato:400,900,700);
 
 :root {
     /* Light */
@@ -14,6 +15,7 @@
     --light-color-panel-divider: #eee;
     --light-color-comment-tag: #707070;
     --light-color-comment-tag-text: #fff;
+    --light-color-code-background: rgba(0, 0, 0, 0.04);
     --light-color-ts: #9600ff;
     --light-color-ts-interface: #647f1b;
     --light-color-ts-enum: #937210;
@@ -37,6 +39,7 @@
     --dark-color-panel-divider: #818181;
     --dark-color-comment-tag: #dcddde;
     --dark-color-comment-tag-text: #2f3136;
+    --dark-color-code-background: rgba(0, 0, 0, 0.04);
     --dark-color-ts: #c97dff;
     --dark-color-ts-interface: #9cbe3c;
     --dark-color-ts-enum: #d6ab29;
@@ -62,6 +65,7 @@
         --color-panel-divider: var(--light-color-panel-divider);
         --color-comment-tag: var(--light-color-comment-tag);
         --color-comment-tag-text: var(--light-color-comment-tag-text);
+        --color-code-background: var(--light-color-code-background);
         --color-ts: var(--light-color-ts);
         --color-ts-interface: var(--light-color-ts-interface);
         --color-ts-enum: var(--light-color-ts-enum);
@@ -88,6 +92,7 @@
         --color-panel-divider: var(--dark-color-panel-divider);
         --color-comment-tag: var(--dark-color-comment-tag);
         --color-comment-tag-text: var(--dark-color-comment-tag-text);
+        --color-code-background: var(--dark-color-code-background);
         --color-ts: var(--dark-color-ts);
         --color-ts-interface: var(--dark-color-ts-interface);
         --color-ts-enum: var(--dark-color-ts-enum);
@@ -98,6 +103,70 @@
         --icon-filter: var(--dark-icon-filter);
         --external-icon: var(--dark-external-icon);
     }
+}
+/* mostly overrides of Tailwind styling */
+.tsd * {
+    border-style: none;
+}
+.tsd p:not(.box, .boxrun, .boxread) {
+    padding-bottom: 0;
+}
+.tsd ol, .tsd ul {
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+/* Displays a box around text */
+.box, .boxrun, .boxread {
+    border: 1px solid #BBB;
+    padding: 0.6em;
+    background: #F4F4FA;
+}
+  
+/* Copyright fineprint on right side of header */
+.top-copyright {
+    float: right;
+    font-size: 0.7em;
+}
+
+/* Copyright at bottom of page */
+.bottom-copyright {
+    margin-bottom: 15px;
+}
+  
+/* Header overrides */
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 .tsd-index-panel h3 {
+    font-weight: bold;
+    line-height: inherit;
+}
+  
+.tsd-page-title h1 {
+    font-size: 2em;
+    margin: 0.67em 0;
+}
+  
+h2 {
+    font-size: 1.5em;
+    margin: 0.83em 0;
+}
+  
+h3 {
+    font-size: 1.17em;
+    margin: 1em 0;
+}
+  
+h4, .tsd-index-panel h3 {
+    font-size: 1em;
+    margin: 1.33em 0;
+}
+  
+h5 {
+    font-size: 0.83em;
+    margin: 1.67em 0;
+}
+  
+h6 {
+    font-size: 0.67em;
+    margin: 2.33em 0;
 }
 
 body {
@@ -152,63 +221,6 @@ body.dark {
     --external-icon: var(--dark-external-icon);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    line-height: 1.2;
-}
-
-h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
-}
-
-h2 {
-    font-size: 1.5em;
-    margin: 0.83em 0;
-}
-
-h3 {
-    font-size: 1.17em;
-    margin: 1em 0;
-}
-
-h4,
-.tsd-index-panel h3 {
-    font-size: 1em;
-    margin: 1.33em 0;
-}
-
-h5 {
-    font-size: 0.83em;
-    margin: 1.67em 0;
-}
-
-h6 {
-    font-size: 0.67em;
-    margin: 2.33em 0;
-}
-
-pre {
-    white-space: pre;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-}
-
-dl,
-menu,
-ol,
-ul {
-    margin: 1em 0;
-}
-
-dd {
-    margin: 0 0 0 40px;
-}
-
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -221,11 +233,10 @@ dd {
 }
 
 .container-main {
-    padding-bottom: 200px;
+    padding-bottom: 15px;
 }
 
 .row {
-    display: flex;
     position: relative;
     margin: 0 -10px;
 }
@@ -241,7 +252,7 @@ dd {
 .col-8 {
     box-sizing: border-box;
     float: left;
-    padding: 0 10px;
+    padding: 0 5px;
 }
 
 .col-4 {
@@ -356,7 +367,7 @@ ul.tsd-descriptions > li > :last-child > :last-child > :last-child,
 body {
     background: var(--color-background);
     font-family: "Segoe UI", sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     color: var(--color-text);
 }
 
@@ -366,6 +377,7 @@ a {
 }
 a:hover {
     text-decoration: underline;
+    box-shadow: none;
 }
 a.external[target="_blank"] {
     background-image: var(--external-icon);
@@ -379,15 +391,18 @@ pre {
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     padding: 0.2em;
     margin: 0;
-    font-size: 14px;
+    font-size: 13px;
+    background-color: var(--color-code-background);
 }
 
 pre {
     padding: 10px;
+    border: 1px solid #BBB;
 }
 pre code {
     padding: 0;
     font-size: 100%;
+    color: inherit;
 }
 
 blockquote {
@@ -421,7 +436,23 @@ blockquote {
 .tsd-typography ol {
     margin: 1em 0;
 }
+.tsd-typography ul ul,
+.tsd-typography ul ol,
+.tsd-typography ul p,
+.tsd-typography ol ul,
+.tsd-typography ol ol,
+.tsd-typography ol p {
+    margin: 0 0;
+}
 
+@media (min-width: 1025px) {
+    html .col-content {
+      width: 80%;
+    }
+    html .col-menu {
+      width: 20%;
+    }
+  }
 @media (min-width: 901px) and (max-width: 1024px) {
     html .col-content {
         width: 72%;
@@ -515,8 +546,11 @@ blockquote {
     }
 }
 
+.tsd-page-header {
+    position: relative;
+}
 .tsd-page-title {
-    padding: 70px 0 20px 0;
+    padding: 60px 0 20px 0;
     margin: 0 0 40px 0;
     background: var(--color-panel);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.35);
@@ -546,6 +580,7 @@ blockquote {
 
 dl.tsd-comment-tags {
     overflow: hidden;
+    margin: 1em 0 1em 0;
 }
 dl.tsd-comment-tags dt {
     float: left;
@@ -558,7 +593,7 @@ dl.tsd-comment-tags dt {
     font-weight: normal;
 }
 dl.tsd-comment-tags dd {
-    margin: 0 0 10px 0;
+    margin: 0 0 3px 0;
 }
 dl.tsd-comment-tags dd:before,
 dl.tsd-comment-tags dd:after {
@@ -593,6 +628,10 @@ dl.tsd-comment-tags p {
 }
 
 .toggle-inherited .tsd-is-inherited {
+    display: none;
+}
+
+.toggle-only-exported .tsd-is-not-exported {
     display: none;
 }
 
@@ -664,7 +703,7 @@ footer .tsd-legend {
     display: inline-block;
     width: 25%;
     padding: 0;
-    font-size: 16px;
+    font-size: 14px;
     list-style: none;
     line-height: 1.333em;
     vertical-align: top;
@@ -685,14 +724,14 @@ footer .tsd-legend {
 }
 
 .tsd-index-panel .tsd-index-content {
-    margin-bottom: -30px !important;
+    margin-bottom: 0px !important;
 }
 .tsd-index-panel .tsd-index-section {
-    margin-bottom: 30px !important;
+    margin-bottom: 0px !important;
 }
 .tsd-index-panel h3 {
-    margin: 0 -20px 10px -20px;
-    padding: 0 20px 10px 20px;
+    margin: 0 -15px 10px -15px;
+    padding: 0 15px 10px 15px;
     border-bottom: 1px solid var(--color-panel-divider);
 }
 .tsd-index-panel ul.tsd-index-list {
@@ -701,16 +740,16 @@ footer .tsd-legend {
     -ms-column-count: 3;
     -o-column-count: 3;
     column-count: 3;
-    -webkit-column-gap: 20px;
-    -moz-column-gap: 20px;
-    -ms-column-gap: 20px;
-    -o-column-gap: 20px;
-    column-gap: 20px;
+    -webkit-column-gap: 15px;
+    -moz-column-gap: 15px;
+    -ms-column-gap: 15px;
+    -o-column-gap: 15px;
+    column-gap: 15px;
     padding: 0;
     list-style: none;
     line-height: 1.333em;
 }
-@media (max-width: 900px) {
+@media (max-width: 640px) {
     .tsd-index-panel ul.tsd-index-list {
         -webkit-column-count: 1;
         -moz-column-count: 1;
@@ -719,7 +758,7 @@ footer .tsd-legend {
         column-count: 1;
     }
 }
-@media (min-width: 901px) and (max-width: 1024px) {
+@media (min-width: 641px) and (max-width: 1024px) {
     .tsd-index-panel ul.tsd-index-list {
         -webkit-column-count: 2;
         -moz-column-count: 2;
@@ -729,6 +768,11 @@ footer .tsd-legend {
     }
 }
 .tsd-index-panel ul.tsd-index-list li {
+    -webkit-column-break-inside: avoid;
+    -moz-column-break-inside: avoid;
+    -ms-column-break-inside: avoid;
+    -o-column-break-inside: avoid;
+    column-break-inside: avoid;
     -webkit-page-break-inside: avoid;
     -moz-page-break-inside: avoid;
     -ms-page-break-inside: avoid;
@@ -778,7 +822,7 @@ footer .tsd-legend {
 
 .tsd-anchor {
     position: absolute;
-    top: -100px;
+    top: -15px;
 }
 
 .tsd-member {
@@ -787,7 +831,6 @@ footer .tsd-legend {
 .tsd-member .tsd-anchor + h3 {
     margin-top: 0;
     margin-bottom: 0;
-    border-bottom: none;
 }
 .tsd-member [data-tsd-kind] {
     color: var(--color-ts);
@@ -805,17 +848,12 @@ footer .tsd-legend {
     color: var(--color-ts-private);
 }
 
-.tsd-navigation {
-    margin: 0 0 0 40px;
-}
 .tsd-navigation a {
     display: block;
     padding-top: 2px;
     padding-bottom: 2px;
-    border-left: 2px solid transparent;
     color: var(--color-text);
     text-decoration: none;
-    transition: border-left-color 0.1s;
 }
 .tsd-navigation a:hover {
     text-decoration: underline;
@@ -830,7 +868,7 @@ footer .tsd-legend {
 }
 
 .tsd-navigation.primary {
-    padding-bottom: 40px;
+    padding-bottom: 10px;
 }
 .tsd-navigation.primary a {
     display: block;
@@ -864,6 +902,10 @@ footer .tsd-legend {
 .tsd-navigation.primary li.current > a {
     font-weight: bold;
 }
+.tsd-navigation.primary li.globals > a {
+    font-size: 1.17em;
+    color: var(--color-link);
+  }
 .tsd-navigation.primary li.label span {
     display: block;
     padding: 20px 0 6px 5px;
@@ -874,17 +916,6 @@ footer .tsd-legend {
     padding-top: 20px;
 }
 
-.tsd-navigation.secondary {
-    max-height: calc(100vh - 1rem - 40px);
-    overflow: auto;
-    position: sticky;
-    top: calc(0.5rem + 40px);
-    transition: 0.3s;
-}
-.tsd-navigation.secondary.tsd-navigation--toolbar-hide {
-    max-height: calc(100vh - 1rem);
-    top: 0.5rem;
-}
 .tsd-navigation.secondary ul {
     transition: opacity 0.2s;
 }
@@ -906,31 +937,42 @@ footer .tsd-legend {
 .tsd-navigation.secondary ul li li li li li li a {
     padding-left: 125px;
 }
-.tsd-navigation.secondary ul.current a {
-    border-left-color: var(--color-panel-divider);
-}
-.tsd-navigation.secondary li.focus > a,
-.tsd-navigation.secondary ul.current li.focus > a {
-    border-left-color: var(--color-menu-divider-focus);
-}
-.tsd-navigation.secondary li.current {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border-left-color: var(--color-panel-divider);
-}
 .tsd-navigation.secondary li.current > a {
     font-weight: bold;
 }
 
 @media (min-width: 901px) {
     .menu-sticky-wrap {
-        position: static;
+      position: static;
     }
-}
+    .no-csspositionsticky .menu-sticky-wrap.sticky {
+      position: fixed;
+    }
+    .no-csspositionsticky .menu-sticky-wrap.sticky-current {
+      position: fixed;
+    }
+    .no-csspositionsticky .menu-sticky-wrap.sticky-current ul.before-current,
+    .no-csspositionsticky .menu-sticky-wrap.sticky-current ul.after-current {
+      opacity: 0;
+    }
+    .no-csspositionsticky .menu-sticky-wrap.sticky-bottom {
+      position: absolute;
+      top: auto !important;
+      left: auto !important;
+      bottom: 0;
+      right: 0;
+    }
+    .csspositionsticky .menu-sticky-wrap.sticky {
+      position: sticky;
+    }
+    .csspositionsticky .menu-sticky-wrap.sticky-current {
+      position: sticky;
+    }
+  }
 
 .tsd-panel {
-    margin: 20px 0;
-    padding: 20px;
+    margin: 15px 0;
+    padding: 15px;
     background-color: var(--color-panel);
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
 }
@@ -940,8 +982,8 @@ footer .tsd-legend {
 .tsd-panel > h1,
 .tsd-panel > h2,
 .tsd-panel > h3 {
-    margin: 1.5em -20px 10px -20px;
-    padding: 0 20px 10px 20px;
+    margin: 1.5em -15px 10px -15px;
+    padding: 0 15px 10px 15px;
     border-bottom: 1px solid var(--color-panel-divider);
 }
 .tsd-panel > h1.tsd-before-signature,
@@ -973,9 +1015,12 @@ footer .tsd-legend {
 .tsd-panel table tr:nth-child(even) {
     background: var(--color-secondary-background);
 }
+.tsd-panel.tsd-extension {
+    background-color: rgba(255, 255, 0, 0.33);
+}
 
 .tsd-panel-group {
-    margin: 60px 0;
+    margin: 20px 0;
 }
 .tsd-panel-group > h1,
 .tsd-panel-group > h2,
@@ -1001,7 +1046,6 @@ footer .tsd-legend {
 #tsd-search .field input {
     box-sizing: border-box;
     position: relative;
-    top: -50px;
     z-index: 1;
     width: 100%;
     padding: 0 10px;
@@ -1054,6 +1098,9 @@ footer .tsd-legend {
     color: var(--color-text-aside);
     font-weight: normal;
 }
+#tsd-search .results span.match {
+    font-weight: 500;
+}
 #tsd-search.has-focus {
     background-color: var(--color-panel-divider);
 }
@@ -1080,7 +1127,7 @@ footer .tsd-legend {
     padding: 10px;
     border: 1px solid var(--color-panel-divider);
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
-    font-size: 14px;
+    font-size: 13px;
     overflow-x: auto;
 }
 .tsd-signature.tsd-kind-icon {
@@ -1091,8 +1138,8 @@ footer .tsd-legend {
     left: 10px;
 }
 .tsd-panel > .tsd-signature {
-    margin-left: -20px;
-    margin-right: -20px;
+    margin-left: -15px;
+    margin-right: -15px;
     border-width: 1px 0;
 }
 .tsd-panel > .tsd-signature.tsd-kind-icon {
@@ -1115,7 +1162,7 @@ footer .tsd-legend {
 .tsd-signatures {
     padding: 0;
     margin: 0 0 1em 0;
-    border: 1px solid var(--color-panel-divider);
+    border-bottom: 1px solid var(--color-panel-divider);
 }
 .tsd-signatures .tsd-signature {
     margin: 0;
@@ -1125,15 +1172,9 @@ footer .tsd-legend {
 .tsd-signatures .tsd-signature:first-child {
     border-top-width: 0;
 }
-.tsd-signatures .tsd-signature.current {
-    background-color: var(--color-panel-divider);
-}
-.tsd-signatures.active > .tsd-signature {
-    cursor: pointer;
-}
 .tsd-panel > .tsd-signatures {
-    margin-left: -20px;
-    margin-right: -20px;
+    margin-left: -15px;
+    margin-right: -15px;
     border-width: 1px 0;
 }
 .tsd-panel > .tsd-signatures .tsd-signature.tsd-kind-icon {
@@ -1143,20 +1184,19 @@ footer .tsd-legend {
     left: 20px;
 }
 .tsd-panel > a.anchor + .tsd-signatures {
-    border-top-width: 0;
     margin-top: -20px;
 }
 
 ul.tsd-descriptions {
     position: relative;
     overflow: hidden;
+    transition: height 0.3s;
+    margin-top: 0;
     padding: 0;
+    padding-top: 10px;
     list-style: none;
 }
 ul.tsd-descriptions.active > .tsd-description {
-    display: none;
-}
-ul.tsd-descriptions.active > .tsd-description.current {
     display: block;
 }
 ul.tsd-descriptions.active > .tsd-description.fade-in {
@@ -1175,8 +1215,8 @@ ul.tsd-descriptions.active > .tsd-description.fade-out {
 ul.tsd-descriptions h4,
 ul.tsd-descriptions .tsd-index-panel h3,
 .tsd-index-panel ul.tsd-descriptions h3 {
-    font-size: 16px;
-    margin: 1em 0 0.5em 0;
+    font-size: 14px;
+    margin: 0.5em 0;
 }
 
 ul.tsd-parameters,
@@ -1188,11 +1228,11 @@ ul.tsd-type-parameters {
 ul.tsd-parameters > li.tsd-parameter-signature,
 ul.tsd-type-parameters > li.tsd-parameter-signature {
     list-style: none;
-    margin-left: -20px;
+    margin-left: -15px;
 }
 ul.tsd-parameters h5,
 ul.tsd-type-parameters h5 {
-    font-size: 16px;
+    font-size: 14px;
     margin: 1em 0 0.5em 0;
 }
 ul.tsd-parameters .tsd-comment,
@@ -1201,7 +1241,7 @@ ul.tsd-type-parameters .tsd-comment {
 }
 
 .tsd-sources {
-    font-size: 14px;
+    font-size: 13px;
     color: var(--color-text-aside);
     margin: 0 0 1em 0;
 }
@@ -1219,7 +1259,7 @@ ul.tsd-type-parameters .tsd-comment {
 }
 
 .tsd-page-toolbar {
-    position: fixed;
+    position: absolute;
     z-index: 1;
     top: 0;
     left: 0;
@@ -1228,7 +1268,6 @@ ul.tsd-type-parameters .tsd-comment {
     color: var(--color-toolbar-text);
     background: var(--color-toolbar);
     border-bottom: 1px solid var(--color-panel-divider);
-    transition: transform 0.3s linear;
 }
 .tsd-page-toolbar a {
     color: var(--color-toolbar-text);
@@ -1412,3 +1451,153 @@ img {
 .tsd-anchor-link:hover > .tsd-anchor-icon svg {
     visibility: visible;
 }
+
+/* nwoods custom CSS rules */
+.box, .boxrun, .boxread {
+border: 1px solid #BBB;
+padding: 0.6em;
+background: #F4F4FA;
+}
+
+.top-copyright {
+float: right;
+font-size: 0.7em;
+}
+
+.bottom-copyright {
+margin-bottom: 15px;
+}
+
+#toplogo {
+background-color: #1F4963;
+font-family: "Lato", sans-serif;
+font-weight: 900;
+font-size: 120%;
+color: white;
+padding: 6px;
+border-radius: 4px;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+color: white;
+font-weight: bold;
+}
+
+.navbar-brand {
+height: auto;
+margin: 9px 10px;
+padding: 6px;
+}
+
+.navbar-inverse .navbar-brand {
+color: white;
+}
+
+.navbar-inverse .navbar-brand:hover {
+background-color: #1F4963;
+}
+
+.nav > li > a {
+font-family: "Lato", sans-serif;
+padding-left: 9px;
+padding-right: 9px;
+}
+
+.navbar {
+border-radius: 0px;
+border-width: 0px;
+}
+
+.navbar-right {
+margin-right: 0px;
+}
+
+.nav li {
+float: left;
+line-height: 40px;
+-o-transition-duration: 0.5s;
+-ms-transition-duration: 0.5s;
+-moz-transition-duration: 0.5s;
+-webkit-transition-duration: 0.5s;
+transition-duration: 0.5s;
+}
+
+.nav li:hover {
+background-color: #707070;
+}
+
+.buy {
+background-color: #79C900;
+}
+
+.activate {
+background-color: #00A9C9;
+}
+
+.container {
+max-width: 1170px;
+padding-left: inherit;
+padding-right: inherit;
+}
+
+.container > .navbar-header {
+margin-left: inherit;
+margin-right: inherit;
+}
+
+.plr15 {
+padding-left: 15px;
+padding-right: 15px;
+}
+
+label {
+max-width: none;
+margin-bottom: 0;
+font-weight: inherit;
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, .tsd-index-panel h3, h5, h6 {
+font-weight: bold;
+line-height: inherit;
+}
+
+#non-fixed-nav {
+margin-bottom: 0px;
+}
+
+@media (min-width: 768px) {
+.navbar > .container .navbar-brand {
+    margin-left: 10px;
+}
+}
+@media (max-width: 767px) {
+.navbar-collapse.collapse {
+    display: none !important;
+}
+
+.navbar-collapse.collapse.in {
+    display: block !important;
+}
+
+.navbar-header .collapse, .navbar-toggle {
+    display: block !important;
+}
+
+.navheader-container {
+    position: relative;
+    width: 100%;
+    height: 50px;
+}
+
+.navheader-container .navheader-collapse {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.navbar-nav {
+    margin: 7.5px 0px;
+}
+}  
